tests/typing/good/testfile-extends-4.scala

class A(x:Any) {}
class B() extends A(this) {}
object Main { def main(args: Array[String]) { } }
